--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -13,7 +13,7 @@ namePrefix: paddle-
 #  someName: someValue
 
 bases:
-#- ../crd
+- ../crd
 - ../rbac
 - ../manager
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in
