--- a/config/crd/bases/batch.paddlepaddle.org_paddlejobs.yaml
+++ b/config/crd/bases/batch.paddlepaddle.org_paddlejobs.yaml
@@ -31,6 +31,9 @@ spec:
     - jsonPath: .status.worker.ready
       name: Worker
       type: string
+    - jsonPath: .status.heter.ready
+      name: Heter
+      type: string
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
@@ -8610,6 +8613,42 @@ spec:
                 type: string
               elastic:
                 type: string
+              heter:
+                properties:
+                  failed:
+                    type: integer
+                  pending:
+                    type: integer
+                  ready:
+                    type: string
+                  refs:
+                    items:
+                      properties:
+                        apiVersion:
+                          type: string
+                        fieldPath:
+                          type: string
+                        kind:
+                          type: string
+                        name:
+                          type: string
+                        namespace:
+                          type: string
+                        resourceVersion:
+                          type: string
+                        uid:
+                          type: string
+                      type: object
+                    type: array
+                  running:
+                    type: integer
+                  starting:
+                    type: integer
+                  succeeded:
+                    type: integer
+                  unknown:
+                    type: integer
+                type: object
               mode:
                 type: string
               observedGeneration:
