--- a/config/crd/v1beta1/batch.paddlepaddle.org_paddlejobs.yaml
+++ b/config/crd/v1beta1/batch.paddlepaddle.org_paddlejobs.yaml
@@ -15,15 +15,6 @@ spec:
   - JSONPath: .status.mode
     name: Mode
     type: string
-  - JSONPath: .status.ps.ready
-    name: PS
-    type: string
-  - JSONPath: .status.worker.ready
-    name: Worker
-    type: string
-  - JSONPath: .status.heter.ready
-    name: Heter
-    type: string
   - JSONPath: .metadata.creationTimestamp
     name: Age
     type: date
@@ -52,6 +43,8 @@ spec:
           properties:
             cleanPodPolicy:
               type: string
+            elastic:
+              type: integer
             heter:
               properties:
                 limits:
@@ -8509,8 +8502,6 @@ spec:
                   type: integer
                 pending:
                   type: integer
-                ready:
-                  type: string
                 refs:
                   items:
                     properties:
@@ -8551,8 +8542,6 @@ spec:
                   type: integer
                 pending:
                   type: integer
-                ready:
-                  type: string
                 refs:
                   items:
                     properties:
@@ -8590,8 +8579,6 @@ spec:
                   type: integer
                 pending:
                   type: integer
-                ready:
-                  type: string
                 refs:
                   items:
                     properties:
