--- a/deploy/v1/crd.yaml
+++ b/deploy/v1/crd.yaml
@@ -37,15 +37,6 @@ spec:
     - jsonPath: .status.mode
       name: Mode
       type: string
-    - jsonPath: .status.ps.ready
-      name: PS
-      type: string
-    - jsonPath: .status.worker.ready
-      name: Worker
-      type: string
-    - jsonPath: .status.heter.ready
-      name: Heter
-      type: string
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
@@ -63,6 +54,8 @@ spec:
             properties:
               cleanPodPolicy:
                 type: string
+              elastic:
+                type: integer
               heter:
                 properties:
                   limits:
@@ -8631,8 +8624,6 @@ spec:
                     type: integer
                   pending:
                     type: integer
-                  ready:
-                    type: string
                   refs:
                     items:
                       properties:
@@ -8673,8 +8664,6 @@ spec:
                     type: integer
                   pending:
                     type: integer
-                  ready:
-                    type: string
                   refs:
                     items:
                       properties:
@@ -8712,8 +8701,6 @@ spec:
                     type: integer
                   pending:
                     type: integer
-                  ready:
-                    type: string
                   refs:
                     items:
                       properties:
