--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,17 +4,20 @@
 resources:
 - bases/batch.paddlepaddle.org_paddlejobs.yaml
 # - v1beta1/batch.paddlepaddle.org_paddlejobs.yaml
+- bases/batch.paddlepaddle.org_samplesets.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_paddlejobs.yaml
+#- patches/webhook_in_samplesets.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_paddlejobs.yaml
+#- patches/cainjection_in_samplesets.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
