--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - bases/batch.paddlepaddle.org_paddlejobs.yaml
 # - v1beta1/batch.paddlepaddle.org_paddlejobs.yaml
 - bases/batch.paddlepaddle.org_samplesets.yaml
+- bases/batch.paddlepaddle.org_samplejobs.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -12,12 +13,14 @@ patchesStrategicMerge:
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_paddlejobs.yaml
 #- patches/webhook_in_samplesets.yaml
+#- patches/webhook_in_samplejobs.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_paddlejobs.yaml
 #- patches/cainjection_in_samplesets.yaml
+#- patches/cainjection_in_samplejobs.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
