--- a/config/crd/v1beta1/batch.paddlepaddle.org_paddlejobs.yaml
+++ b/config/crd/v1beta1/batch.paddlepaddle.org_paddlejobs.yaml
@@ -5673,6 +5673,24 @@ spec:
               required:
               - replicas
               type: object
+            schedulingPolicy:
+              properties:
+                minAvailable:
+                  format: int32
+                  type: integer
+                minResources:
+                  additionalProperties:
+                    anyOf:
+                    - type: integer
+                    - type: string
+                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                    x-kubernetes-int-or-string: true
+                  type: object
+                priorityClass:
+                  type: string
+                queue:
+                  type: string
+              type: object
             withGloo:
               type: integer
             worker:
