Add sampleset reconcileBound function

--- a/config/crd/bases/batch.paddlepaddle.org_samplesets.yaml
+++ b/config/crd/bases/batch.paddlepaddle.org_samplesets.yaml
@@ -160,6 +160,7 @@ spec:
                 type: object
               partitions:
                 format: int32
+                minimum: 1
                 type: integer
               secretRef:
                 properties:
