--- a/config/samples/batch_v1alpha1_sampleset.yaml
+++ b/config/samples/batch_v1alpha1_sampleset.yaml
@@ -20,11 +20,11 @@ spec:
 #      - mediumType: HDD
 #        path: /data/imagenet
 #        cacheSize: 1024
-#  nodeAffinity:
-#    required:
-#      nodeSelectorTerms:
-#        - matchExpressions:
-#            - key: sampleset
-#              operator: In
-#              values:
-#                - "imagenet"
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: sampleset
+              operator: In
+              values:
+                - "imagenet"
