--- a/deploy/v1/operator.yaml
+++ b/deploy/v1/operator.yaml
@@ -279,7 +279,7 @@ spec:
         - --namespace=paddle-system
         command:
         - /manager
-        image: registry.baidubce.com/paddle-operator/controller:v1
+        image: registry.baidubce.com/paddle-operator/controller:v0.3-beta
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
