Fix some bugs in runtime server

--- a/Dockerfile.sampleset
+++ b/Dockerfile.sampleset
@@ -24,7 +24,10 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GO111MODULE=on go build -a -o manager 
 FROM bitnami/minideb:stretch
 WORKDIR /
 
-ENV RUNTIME_IMAGE=$EXECUTOR_IMG:$GIT_VERSION
+ARG MANAGER_IMG
+ARG GIT_VERSION
+
+ENV RUNTIME_IMAGE=$MANAGER_IMG:$GIT_VERSION
 
 COPY --from=builder /workspace/manager .
 USER 65532:65532
