--- a/config/crd/bases/batch.paddlepaddle.org_samplesets.yaml
+++ b/config/crd/bases/batch.paddlepaddle.org_samplesets.yaml
@@ -64,6 +64,7 @@ spec:
                           minLength: 1
                           type: string
                       type: object
+                    minItems: 1
                     type: array
                 type: object
               csi:
@@ -201,8 +202,6 @@ spec:
             properties:
               cacheStatus:
                 properties:
-                  cachedFiles:
-                    type: integer
                   cachedSize:
                     type: string
                   diskAvail:
@@ -216,7 +215,7 @@ spec:
                   errorMassage:
                     type: string
                   totalFiles:
-                    type: integer
+                    type: string
                   totalSize:
                     type: string
                 type: object
