Fix log withvalues and RuntimePodIndexerFunc

--- a/config/samples/batch_v1alpha1_sampleset.yaml
+++ b/config/samples/batch_v1alpha1_sampleset.yaml
@@ -6,6 +6,7 @@ spec:
   partitions: 2
   source:
     uri: bos://zhouti-mcp-edge.gz.bcebos.com/sync-source
+  noSync: true
   secretRef:
     name: imagenet
   csi:
