Fix rbac problems in samplejob controller

--- a/config/crd/bases/batch.paddlepaddle.org_samplesets.yaml
+++ b/config/crd/bases/batch.paddlepaddle.org_samplesets.yaml
@@ -169,12 +169,16 @@ spec:
                 properties:
                   name:
                     type: string
+                  namespace:
+                    type: string
                 type: object
               source:
                 properties:
                   secretRef:
                     properties:
                       name:
+                        type: string
+                      namespace:
                         type: string
                     type: object
                   uri:
