--- a/config/crd/bases/batch.paddlepaddle.org_samplejobs.yaml
+++ b/config/crd/bases/batch.paddlepaddle.org_samplejobs.yaml
@@ -16,7 +16,14 @@ spec:
     singular: samplejob
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .status.phase
+      name: PHASE
+      type: string
+    - jsonPath: .status.cacheStatus.cachedSize
+      name: CACHED SIZE
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         properties:
@@ -122,54 +129,32 @@ spec:
             type: object
           status:
             properties:
-              active:
-                items:
-                  properties:
-                    apiVersion:
-                      type: string
-                    fieldPath:
-                      type: string
-                    kind:
-                      type: string
-                    name:
-                      type: string
-                    namespace:
-                      type: string
-                    resourceVersion:
-                      type: string
-                    uid:
-                      type: string
-                  type: object
-                type: array
-                x-kubernetes-list-type: atomic
-              conditions:
-                items:
-                  properties:
-                    lastProbeTime:
-                      format: date-time
-                      type: string
-                    lastTransitionTime:
-                      format: date-time
-                      type: string
-                    message:
-                      type: string
-                    reason:
-                      type: string
-                    status:
-                      type: string
-                    type:
-                      type: string
-                  required:
-                  - status
-                  - type
-                  type: object
-                type: array
-                x-kubernetes-list-type: atomic
-              lastScheduleTime:
-                format: date-time
-                type: string
-              lastSuccessfulTime:
-                format: date-time
+              cronJobStatus:
+                properties:
+                  active:
+                    items:
+                      properties:
+                        apiVersion:
+                          type: string
+                        fieldPath:
+                          type: string
+                        kind:
+                          type: string
+                        name:
+                          type: string
+                        namespace:
+                          type: string
+                        resourceVersion:
+                          type: string
+                        uid:
+                          type: string
+                      type: object
+                    type: array
+                  lastScheduleTime:
+                    format: date-time
+                    type: string
+                type: object
+              jobName:
                 type: string
               phase:
                 type: string
