Do warmup job with different strategy

--- a/config/crd/bases/batch.paddlepaddle.org_samplejobs.yaml
+++ b/config/crd/bases/batch.paddlepaddle.org_samplejobs.yaml
@@ -118,7 +118,7 @@ spec:
                     minItems: 1
                     type: array
                   strategyName:
-                    default: random
+                    default: sequence
                     enum:
                     - random
                     - sequence
