--- a/config/crd/bases/batch.paddlepaddle.org_samplesets.yaml
+++ b/config/crd/bases/batch.paddlepaddle.org_samplesets.yaml
@@ -227,6 +227,8 @@ spec:
                 properties:
                   clearJobName:
                     type: string
+                  syncJobDone:
+                    type: string
                   syncJobName:
                     type: string
                 type: object
