Fix delete sampleset function

--- a/config/crd/bases/batch.paddlepaddle.org_samplesets.yaml
+++ b/config/crd/bases/batch.paddlepaddle.org_samplesets.yaml
@@ -225,6 +225,8 @@ spec:
                 type: object
               jobsName:
                 properties:
+                  clearJobDone:
+                    type: string
                   clearJobName:
                     type: string
                   syncJobDone:
