--- a/config/crd/bases/batch.paddlepaddle.org_samplesets.yaml
+++ b/config/crd/bases/batch.paddlepaddle.org_samplesets.yaml
@@ -225,13 +225,9 @@ spec:
                 type: object
               jobsName:
                 properties:
-                  clearJobDone:
-                    type: string
-                  clearJobName:
-                    type: string
-                  syncJobDone:
-                    type: string
                   syncJobName:
+                    type: string
+                  warmupJobName:
                     type: string
                 type: object
               phase:
