--- a/config/crd/bases/batch.paddlepaddle.org_paddlejobs.yaml
+++ b/config/crd/bases/batch.paddlepaddle.org_paddlejobs.yaml
@@ -5746,6 +5746,17 @@ spec:
                 required:
                 - replicas
                 type: object
+              sampleSetRef:
+                properties:
+                  mountPath:
+                    type: string
+                  name:
+                    type: string
+                  namespace:
+                    type: string
+                required:
+                - mountPath
+                type: object
               schedulingPolicy:
                 properties:
                   minAvailable:
