--- a/deploy/v1/crd.yaml
+++ b/deploy/v1/crd.yaml
@@ -5758,6 +5758,17 @@ spec:
                 required:
                 - replicas
                 type: object
+              sampleSetRef:
+                properties:
+                  mountPath:
+                    type: string
+                  name:
+                    type: string
+                  namespace:
+                    type: string
+                required:
+                - mountPath
+                type: object
               schedulingPolicy:
                 properties:
                   minAvailable:
