--- a/deploy/v1beta1/crd.yaml
+++ b/deploy/v1beta1/crd.yaml
@@ -5687,6 +5687,17 @@ spec:
               required:
               - replicas
               type: object
+            sampleSetRef:
+              properties:
+                mountPath:
+                  type: string
+                name:
+                  type: string
+                namespace:
+                  type: string
+              required:
+              - mountPath
+              type: object
             schedulingPolicy:
               properties:
                 minAvailable:
