--- a/config/crd/bases/batch.paddlepaddle.org_samplejobs.yaml
+++ b/config/crd/bases/batch.paddlepaddle.org_samplejobs.yaml
@@ -51,9 +51,11 @@ spec:
                     minItems: 1
                     type: array
                 type: object
-              sampleset:
-                minLength: 0
-                type: string
+              sampleSetRef:
+                properties:
+                  name:
+                    type: string
+                type: object
               schedule:
                 type: string
               syncOptions:
@@ -158,6 +160,13 @@ spec:
                 type: string
               phase:
                 type: string
+              secretRef:
+                properties:
+                  name:
+                    type: string
+                  namespace:
+                    type: string
+                type: object
             type: object
         type: object
     served: true
